\name{minfinews}
\title{Minfi News}
\encoding{UTF-8}

\section{Version 1.23}{
  \itemize{
    \item Fixed as() (coercion) from RGChannelSetExtended to
    RGChannelSet, to support the argument extended=TRUE in
    read.matharray(). The core issue is the new("RChannelSetExtended")
    is an invalid object because it does not have correct elements of the
    assay slot.  Instead of addressing this, I used a check for ncol=0,
    nrow=0 in the coercion function which asssumes the presence of
    correctly named assays. Original issue report by Stewart Morris
    <swmorris@exseed.ed.ac.uk>.
    \item Improved (made prettier) the printing of messages in
    read.metharray() and friends.
    \item Changed seqlevels(..., force = TRUE) to seqlevel(...,
    pruning.mode = "coarse").  
  }
}

\section{Version 1.21}{
  \itemize{
    \item Moving RGChannelSet, MethylSet and RatioSet from building on
    eSet (from Biobase) to SummarizedExperiment (from
    SummarizedExperiment). Most important changes are that the
    constructor functions now uses the argument colData instead of
    pData; some of them have more arguments.  The updateObject methods
    have been extended to update to the new class backend.  While the
    pData, sampleNames, featureNames methods still work, we recommend
    (at least for package writers) to move to colData, colnames and
    rownames.
    \item Reverted the bugfix to preprocessQuantile mentioned under news
    for version 1.19. Our fix was wrong; the original code did not have
    a bug. Thanks to users who reported issues with the function
    (Frederic Fournier and David Martino).
    \item bugfix for getSnpBeta for subsetted (and combined)
    RGChannelSets (reported and diagnosed by Warren Cheung).
    \item Accessing the manifest or annotation now fails for an
    'unknown' array.
    \item We now support gzipped IDAT files.
    \item Fixed a bug in read.metharray() which resulted in an error in