@@ -95,7 +95,7 @@ c(bibentry(bibtype = "Article",
            journal = "Epigenetics & Chromatin",
            year = "2016",
            volume = "9",
-           number = "56",
+           pages = "56",
            doi = "10.1186/s13072-016-0107-z",
            pubmed = "27980682",
            header = "Gap hunting is described in:"),
@@ -105,10 +105,13 @@ c(bibentry(bibtype = "Article",
            author = c(person(given = "Jean-Philippe", family = "Fortin"),
                       person(given = c("Timothy",  "J."), family = "Triche"),
                       person(given = c("Kasper", "D."), family = "Hansen")),
-           title = "Preprocessing, normalization and integration of the Illumina HumanMethylationEPIC array",
-           journal = "bioRxiv",
-           year = "2016",
-           doi = "10.1101/065490",
+           title = "Preprocessing, normalization and integration of the Illumina HumanMethylationEPIC array with minfi",
+           journal = "Bioinformatics",
+           year = "2017",
+           volume = "33",
+           number = "4",
+           page = "558-560",         
+           doi = "10.1093/bioinformatics/btw691",
            header = "Extending minfi to support EPIC arrays is described in:")
 
 )
