@@ -53,12 +53,16 @@
 }
 
 @article{minfiEPIC,
-  title =	 "Preprocessing, normalization and integration of the Illumina
-                  {HumanMethylationEPIC} array",
-  author =	 {Fortin, Jean-Philippe and Triche, Timothy J and Hansen, Kasper D},
-  journal =	 "bioRxiv",
-  year =	 2016,
-  doi =		 "10.1101/065490"
+  title =	 {Preprocessing, normalization and integration of the {Illumina}
+                  {HumanMethylationEPIC} array with minfi},
+  author =	 {Fortin, Jean-Philippe and Triche Jr., Timothy and Hansen, Kasper D},
+  year =	 {2017},
+  volume =	 {33},
+  number =	 {4},
+  pages =	 {558--560},
+  journal =	 {Bioinformatics},
+  doi =		 {10.1093/bioinformatics/btw691},
+  pubmed =	 {28035024}
 }
 
 @article{Sandoval:2011,
@@ -170,6 +174,19 @@
   doi =		 {10.1093/ije/dyr238}
 }
 
+@article{gaphunter,
+  title =	 {"{Gap} hunting" to to characterize clustered probe signals in {Illumina}
+                  methylation array data},
+  year =	 {2016},
+  author =	 {Andrews, Shan V and Ladd-Acosta, Christine and Feinberg, Andrew P and Hansen,
+                  Kasper D and Fallin, M Daniele},
+  journal =	 {Epigenetics and Chromatin},
+  volume =	 {9},
+  pages =	 {56},
+  doi =		 {10.1186/s13072-016-0107-z},
+  pubmed =	 {27980682},
+  pmcid =	 {PMC5142147}
+}
 
 
 % Local Variables:
